--- a/config/config_exp1.yaml
+++ b/config/config_exp1.yaml
@@ -2,43 +2,52 @@
 
 # --- Large Language Model (LLM) and Embedding Model Configuration ---
 llm_api_configs:
-  - base_url: "http://localhost:3000/v1/"                                         # Example: Local API endpoint
-    api_key: "sk-V395yxePMIyg6eCiNtL2mdlD1LAqA3KKAgj783ElOditm151"                                                             # Replace with your actual API key
-    model: "THUDM/glm-4-9b-chat"                              # Model name for this endpoint
-    temperature: 0.9                                                              # Default temperature for this model
-    top_p: 0.95                                                                   # Default top_p for this model
-    description: "Local New-API deepseek-ai/DeepSeek-R1-Distill-Qwen-7B"
-    weight: 1.0                                                                   # Load balancing weight
-  - base_url: "https://api.siliconflow.cn/v1/"                                    # Example: SiliconFlow endpoint (adjust if needed)
-    api_key: "sk-iuebkrpyqrcxdkyngdbmxmpngjpmldiznyityzvdomzcceim"                                                             # Replace with your actual API key
-    model: "THUDM/glm-4-9b-chat"                                                          # Embedding model name
-    description: "SiliconFlow Embedding API (bge-m3)"
-    weight: 1.0                                                                   # Load balancing weight
-  - base_url: "https://open.bigmodel.cn/api/paas/v4/"                             # Example: ZhipuAI endpoint
-    api_key: "885413f33e13893f7a95153c2250eff6.GDIwUDu4EAlF858w"                                                 # Replace with your actual API key
-    model: "glm-4-flash"                                                          # Model name
-    temperature: 0.9                                                               # Default temperature
-    top_p: 0.95                                                                  # Default top_p
-    description: "ZhipuAI GLM-4-Flash"
-    weight: 1.0                                                                   # Load balancing weight
-  # Add more API configurations as needed
+  - base_url: "https://c-1933834114463236098.ksai.scnet.cn:58043/v1/"
+    api_key: "xx"
+    model: "Meta-Llama-3.1-8B-Instruct"
+    temperature: 0.7
+    top_p: 0.9
+    description: "Local Meta-Llama-3.1-8B-Instruct"
+    weight: 1.0
+  - base_url: "https://c-1933834967902756866.ksai.scnet.cn:58043/v1/"
+    api_key: "xx"
+    model: "Meta-Llama-3.1-8B-Instruct"
+    temperature: 0.7
+    top_p: 0.9
+    description: "Local Meta-Llama-3.1-8B-Instruct"
+    weight: 1.0
+  - base_url: "https://c-1933834139007623170.ksai.scnet.cn:58043/v1/"
+    api_key: "xx"
+    model: "Meta-Llama-3.1-8B-Instruct"
+    temperature: 0.7
+    top_p: 0.9
+    description: "Local Meta-Llama-3.1-8B-Instruct"
+    weight: 1.0
+  - base_url: "https://c-1933840901022588929.ksai.scnet.cn:58043/v1/"
+    api_key: "xx"
+    model: "Meta-Llama-3.1-8B-Instruct"
+    temperature: 0.7
+    top_p: 0.9
+    description: "Local Meta-Llama-3.1-8B-Instruct"
+    weight: 1.0
 
-agent_driver_llm_index: [1]      # Array of indices for agent decisions (supports load balancing)
-other_llm_index: [1]          # Array of indices for other tasks (e.g., emotion eval, sentiment analysis)
+
+agent_driver_llm_index: [0,1,2,3]      # Array of indices for agent decisions (supports load balancing)
+other_llm_index: [0,1,2,3]          # Array of indices for other tasks (e.g., emotion eval, sentiment analysis)
 embedding_api_index: 1           # Index (0-based) in llm_api_configs to use for remote embeddings (if use_local_embedding is False)
 
 # QPS Control Configuration
-max_concurrent_requests: 3                 # Maximum concurrent LLM requests to prevent rate limiting
+max_concurrent_requests: 100               # Maximum concurrent LLM requests to prevent rate limiting
 
 use_local_embedding_model: True # Whether to use a local embedding model (True) or a remote API (False)
 # local_embedding_model_path: "sentence-transformers/all-MiniLM-L6-v2" # Path or HF identifier for local model
-local_embedding_model_path: "C://Users//Cromwell//.cache//huggingface//hub//models--sentence-transformers--all-MiniLM-L6-v2//snapshots//e4ce9877abf3edfe10b0d82785e83bdcb973e22e" # Example local path from doc
+local_embedding_model_path: "sentence-transformers/all-MiniLM-L6-v2" # Example local path from doc
 embedding_dimension: 384        # Dimension of the chosen embedding model
 embedding_device: "cpu"        # Device for local embeddings ('cuda', 'cpu', etc.)
 
 # --- Social Agent Configuration ---
 agent_data_path: "../data/cgsc2018_profiles.json" # Path to the JSON file containing agent source data
-agent_sample_size: 500         # Number of agents to sample for the simulation
+agent_sample_size: 100         # Number of agents to sample for the simulation
 agent_sample_seed: 42            # Random seed for agent sampling reproducibility
 agent_sampling_method: "random"  # Method for sampling agents ("random")
 
@@ -130,10 +139,10 @@ subsystem_configs:
 
 # --- Simulation and Evaluation Configuration ---
 simulation_name_prefix: "consumption_voucher" # Prefix for the results directory name
-num_epochs: 12                   # Total number of simulation steps (epochs)
+num_epochs: 1                   # Total number of simulation steps (epochs)
 start_date: "2020-12-01"         # Simulation start date (YYYY-MM-DD)
 epoch_duration_days: 30          # Duration of each epoch in days
-save_decision_prompts: True      # Whether to save agent decision prompts to the database
+save_decision_prompts: False      # Whether to save agent decision prompts to the database
 
 # --- Logging Configuration ---
 log_level: "INFO"                # Logging level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
